--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "start": "nest start",                   // dev mode par défaut
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main.js"
+    "start:prod": "node dist/main.js",
     "seed": "ts-node prisma/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
